--- a/src/common/components/Header/Header.module.scss
+++ b/src/common/components/Header/Header.module.scss
@@ -23,19 +23,19 @@
 }
 
 .runtimeButton {
-  background: url('../../assets/icons/eyeInactive.svg') 12px 50% no-repeat;
+  background: url('../../../assets/icons/eyeInactive.svg') 12px 50% no-repeat;
 }
 
 .runtimeActive {
-  background: white url('../../assets/icons/eyeActive.svg') 12px 50% no-repeat;
+  background: white url('../../../assets/icons/eyeActive.svg') 12px 50% no-repeat;
   border: 1px solid #e2e3e5;
 }
 
 .constructorButton {
-  background: url('../../assets/icons/selectorInactive.svg') 12px 50% no-repeat;
+  background: url('../../../assets/icons/selectorInactive.svg') 12px 50% no-repeat;
 }
 
 .constructorActive {
-  background: white url('../../assets/icons/selectorActive.svg') 12px 50% no-repeat;
+  background: white url('../../../assets/icons/selectorActive.svg') 12px 50% no-repeat;
   border: 1px solid #e2e3e5;
 }
