--- a/src/features/SidebarContainer/Sidebar/CalcOperations/CalcOperations.module.scss
+++ b/src/features/SidebarContainer/Sidebar/CalcOperations/CalcOperations.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/mixins/mixins';
+@import '../../../../common/styles/mixins/mixins';
 
 .operations {
   display: flex;
@@ -18,8 +18,21 @@
     border: 1px solid #e2e3e5;
     border-radius: 6px;
 
+    &:hover {
+      border: 2px solid #5d5fef;
+    }
+
     &:active {
+      color: white;
+      background: #5d5fef;
       border: 2px solid #5d5fef;
     }
   }
+}
+
+.reset {
+  position: absolute;
+  top: 4px;
+  right: -56px;
+  height: 48px;
 }
