--- a/src/features/SidebarContainer/Sidebar/Equal/Equal.module.scss
+++ b/src/features/SidebarContainer/Sidebar/Equal/Equal.module.scss
@@ -1,4 +1,4 @@
-@import '../../../../styles/mixins/mixins';
+@import '../../../../common/styles/mixins/mixins';
 
 .equal {
   @include user_select_none;
