--- a/src/features/SidebarContainer/Sidebar/Scoreboard/Scoreboard.module.scss
+++ b/src/features/SidebarContainer/Sidebar/Scoreboard/Scoreboard.module.scss
@@ -8,13 +8,43 @@
 
   font-size: 36px;
   font-weight: 800;
+  white-space: nowrap;
 
   background: #f3f4f6;
   border-radius: 6px;
 }
 
+.numbers {
+  overflow-x: overlay;
+
+  &::-webkit-scrollbar {
+    width: 6px; /* Remove scrollbar space */
+    height: 15px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: rgb(241 241 241 / 32.2%);
+    background-clip: padding-box;
+    border: 4px solid transparent;
+    border-radius: 9999px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgb(131 131 131 / 47.5%);
+    background-clip: padding-box;
+    border: 4px solid rgb(0 0 0 / 0%);
+    border-radius: 9999px;
+  }
+
+  &::-webkit-scrollbar-corner {
+    display: none;
+    background-color: transparent;
+    border-color: transparent;
+  }
+}
+
 .size17 {
-  font-size: 19px;
+  font-size: 18px;
 }
 
 .size16 {
